# sdrlink

./: .gitignore  App.qml  CMakeLists.txt  README.md  Resources.qrc  app.cpp
Demodulator/ADSB/: ADSBDemodulator.cpp  ADSBDemodulator.h
Manager/: RTLManagerTest.h
Manager/RTL/: RTLManager.cpp
Manager/SDR/: SDRManager.h
Receiver/ADSB/: ADSBReceiver.cpp  ADSBReceiver.h
Resources/Animation/: splash.json
Resources/Image/: ic_logo_launcher.icns
Resources/Style/: Style.qml
UI/Component/: CircleLoadingBar.qml  DeviceCard.qml  ModuleCard.qml  Toolbar.qml
UI/Navigation/: NavigationViewModel.qml  Route.qml  qmldir
UI/Page/About/: AboutPage.qml
UI/Page/Dashboard/: DashboardPage.qml  DashboardViewModel.qml
UI/Page/Device/: DevicePage.qml  DeviceViewModel.qml
UI/Page/Module/Flight/Map/: FlightMapPage.qml
UI/Page/Module/Radar/: RadarPage.qml
UI/Page/Splash/: SplashPage.qml
